[AtsInfra] Atualizando alterações locais para compatibilidade com a master, version ${minecraftVersion}.27